--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             id="conditions"
           />
           <label for="conditions">
-            Acepta los <a href="">Terminos y condiciones</a> de nuestra pagina </label
+            Acepta los <a href="a.html">Terminos y condiciones</a> de nuestra pagina </label
           ><br />
           <input
             class="check"
